Fix styling of legend on mobile

--- a/src/app/vineyeard-view/timeline/timeline.component.scss
+++ b/src/app/vineyeard-view/timeline/timeline.component.scss
@@ -6,11 +6,13 @@
   align-items: center;
 
   .legend {
-    height: 3rem;
+    height: 4rem;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
+    padding: .25rem;
 
     .legend-item {
       margin-right: 1rem;
@@ -18,6 +20,7 @@
       flex-direction: row;
       justify-content: center;
       align-items: center;
+      margin-top: .25rem;
 
       .color {
         width: 16px;
